<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextManagerActivity">

    <EditText
        android:id="@+id/et_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:background="@color/bg_color"
        android:text=""
        android:hint="@string/recognized_text"
        android:ems="10"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <!--<ScrollView-->
        <!--android:id="@+id/SCROLLER_ID"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:fillViewport="true"-->
        <!--android:scrollbars="vertical"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/linearLayout3"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:layout_constraintLeft_creator="1"-->
        <!--tools:layout_constraintRight_creator="1"-->
        <!--tools:layout_constraintTop_creator="1">-->

        <!--<TextView-->
            <!--android:id="@+id/tv_result"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_margin="2dp"-->
            <!--android:background="@color/bg_color"-->
            <!--android:textColor="@color/text_color"-->
            <!--android:textSize="16sp" />-->

    <!--</ScrollView>-->
    <LinearLayout
        android:id="@+id/linearLayout3"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_edit"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:background="@drawable/button_bg"
            android:text="@string/str_edit" />

        <Button
            android:id="@+id/btn_speak"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:background="@drawable/button_bg"
            android:text="@string/str_speak" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_save"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:background="@drawable/button_bg"
            android:text="@string/string_save" />

        <Button
            android:id="@+id/btn_share"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:background="@drawable/button_bg"
            android:text="@string/string_share" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_copy"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:background="@drawable/button_bg"
            android:text="@string/string_copy" />
        <Button
            android:id="@+id/btn_trans"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:background="@drawable/button_bg"
            android:text="@string/str_trans" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>